feat(config): Add rendering and client-side optimization configuration options
- Added configuration options for leaf culling and face occlusion culling
- Added entity and block entity occlusion culling function
- Added collision box size limit configuration
- Added resource pack cache optimization options
- Refactor the configuration system to support nested configuration objects
- Updated Chinese and English localization files to support new configuration items
- Fix configuration value update logic to correctly handle nested objects
- Optimize file package resource namespace lookup cache - Fix default configuration value creation method to improve compatibility
- Updated Cloth Config version to ensure compatibility
- Fixed refmap path problem in Mixin configuration